# SVG_reader

./: .$Demo1.drawio.bkp  .gitattributes  CMakeLists.txt  Circle.h  Demo1.drawio  Eclipse.h  Ellipse.h  Group.h  Line.h  LinearGradient.h  Path.h  Project.vcxproj  Project.vcxproj.filters  Project.vcxproj.filters.txt  README.md  RadialGradient.h  Rect.h  SVGDemo.cpp  SVGDemo.vcxproj  SVGDemo.vcxproj.filters  SVGElement.h  SVGRenderer.h  Stop.h  Text.h  Transform.h  main.cpp  polygon.h  polyline.h  rapidxml.hpp  resource.h  stdafx.h
x64/Debug/: Project.exe.recipe  Project.ilk  SVGDemo.exe.recipe  SVGDemo.ilk  svgdemo.obj.enc  vc143.idb
x64/Debug/Project.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Project.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
x64/Debug/SVGDemo.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  SVGDemo.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
